--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <title>alanna mix | wedding</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300|Raleway" rel="stylesheet">
     <!--<script src="https://use.fontawesome.com/d60a1da4af.js"></script>-->
   </head>
   <body>
