--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,8 @@
     <title>alanna mix | wedding</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300|Raleway" rel="stylesheet">
-    <!--<script src="https://use.fontawesome.com/d60a1da4af.js"></script>-->
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    // GO LOOK AT FUCKING FLEXBOX  display: flex   flexbox froggy
   </head>
   <body>
     <div class="main"></div>
